--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +18,24 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+/* .slick-arrow.slick-prev ,.slick-next{
+
+
+  display: none;
+} */
+
+
+@layer components {
+  .icon{
+      @apply hidden xl:inline-flex p-2 h-10 w-10 bg-gray-200 rounded-full text-gray-700 
+  cursor-pointer hover:bg-gray-300; 
+  }
+  
+  .line1{
+      @apply  hover:border-b-2 border-orange-500
+      transition-all duration-700 ease-in-out sm:text-[14px] lg:text-2xl     ;
+  }
 }
