--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,24 @@ margin-left: 12px;
       @apply  hover:border-b-2 border-orange-500
       transition-all duration-700 ease-in-out sm:text-[14px] lg:text-2xl     ;
   }
+
+
+.hover-btn{
+
+@apply hover:bg-teal-100  p-3 text-white  bg-teal-400  text-2xl hover:text-black
+
+     
+
+
+}
+
+.ch{
+@apply text-[#27326f]
+
+}
+
+
+
 }
 
 
